Updated README as the Batik library is automatically installed (if required)

--- a/README.mediawiki
+++ b/README.mediawiki
@@ -4,8 +4,7 @@ This Eclipse plugin adds a entry in the Export Wizard (File &rarr; Export &rarr;
 
 == Installation ==
 
-The imageexport.svg plugin needs the [http://github.com/veger/eclipse-batik Batik library] to be installed.
-So if you need the SVG export functionality, be sure to install this library first, as this is not done automatically yet (see [https://github.com/veger/eclipse-gef-imageexport/issues/1 issue #1])
+The imageexport.svg plugin depends on the the [http://github.com/veger/eclipse-batik Batik library], it is installed automatically (since version 0.1.3), if required.
 
 An update site is provided to the install the imageexport plugin.
 Follow these steps for easy installation:
