Fixed small typo

--- a/README.mediawiki
+++ b/README.mediawiki
@@ -32,7 +32,7 @@ If larger images are required it is adviced to export as SVG (using the ImageExp
 To add new formats
 * Create a new plugin
 * In the plugin.xml editor add a [http://github.com/veger/eclipse-gef-imageexport/blob/master/nl.utwente.ce.imageexport/schema/ExportFormatProvider.exsd nl.utwente.ce.imageexport.exportFormatProvider extension]
-* Add a new iamge_format and fill in the required fields
+* Add a new image_format and fill in the required fields
 * The provided class should implement the [http://github.com/veger/eclipse-gef-imageexport/blob/master/nl.utwente.ce.imageexport/src/nl/utwente/ce/imageexport/IImageFormatProvider.java IImageFormatProvider] interface.
 
 The ImageExport.SVG should be easy enough to understand how this is done.
